syntax = "proto3";

package v1.status;

import "google/protobuf/timestamp.proto";

option go_package = "vc/internal/gen/status/apiv1.status";


message StatusRequest {}

message StatusReply {
    message Data {
        string serviceName = 1;
        repeated StatusProbe probes = 2;
        string status = 3;
    }
    Data data = 10;
}

message StatusProbe {
    string name = 1;
    bool healthy = 2;
    string message = 3;
    google.protobuf.Timestamp lastCheckedTS = 4;
}

message StatusProbeStore {
    google.protobuf.Timestamp nextCheck = 1;
    StatusProbe previousResult = 2;
}